fixed ui text align justify

--- a/src/components/Pages/Faq/Faq.module.scss
+++ b/src/components/Pages/Faq/Faq.module.scss
@@ -1,5 +1,6 @@
 .faqWrapper {
   padding: 16px;
+  text-align: justify;
 
   .questionCard {
     background: #f9f9f9;
